--- a/script.module.urlresolver/resources/language/Czech/strings.po
+++ b/script.module.urlresolver/resources/language/Czech/strings.po
@@ -187,3 +187,7 @@ msgstr "Žádná IP autorizace"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Autorizace vysílání Vshare.eu"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx vysílání Vshare.eu"
