--- a/script.module.urlresolver/resources/language/Dutch/strings.po
+++ b/script.module.urlresolver/resources/language/Dutch/strings.po
@@ -188,3 +188,7 @@ msgstr "Geen IP Authorisatie"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu Stream Authorisatie"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx Stream Authorisatie"
