--- a/script.module.urlresolver/resources/language/English (US)/strings.po
+++ b/script.module.urlresolver/resources/language/English (US)/strings.po
@@ -191,3 +191,7 @@ msgstr "Client ID"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu Stream Authorization"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx Stream Authorization"
