--- a/script.module.urlresolver/resources/language/German/strings.po
+++ b/script.module.urlresolver/resources/language/German/strings.po
@@ -187,3 +187,7 @@ msgstr "Keine IP Autorisierung"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu Stream Autorisierung"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx Stream Autorisierung"
