--- a/script.module.urlresolver/resources/language/Hebrew/strings.po
+++ b/script.module.urlresolver/resources/language/Hebrew/strings.po
@@ -190,3 +190,7 @@ msgstr "זיהוי לקוח"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "הרשאה להזרמה מ-Vshare.eu"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "הרשאה להזרמה מ-Flashx"
