--- a/script.module.urlresolver/resources/language/Hungarian/strings.po
+++ b/script.module.urlresolver/resources/language/Hungarian/strings.po
@@ -179,3 +179,7 @@ msgstr "OK"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu Stream autorizáció"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx Stream autorizáció"
