--- a/script.module.urlresolver/resources/language/Romanian/strings.po
+++ b/script.module.urlresolver/resources/language/Romanian/strings.po
@@ -189,3 +189,7 @@ msgstr "Fara autorizare iP"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Autorizare stream Vshare.eu"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Autorizare stream Flashx"
