--- a/script.module.urlresolver/resources/language/Slovak/strings.po
+++ b/script.module.urlresolver/resources/language/Slovak/strings.po
@@ -188,3 +188,7 @@ msgstr "Chýba IP autorizácia"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu autorizácia streamu"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx autorizácia streamu"
