--- a/script.module.urlresolver/resources/language/Spanish/strings.po
+++ b/script.module.urlresolver/resources/language/Spanish/strings.po
@@ -187,3 +187,7 @@ msgstr "IP No Autorizada"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Autorización para Transmitir Vshare.eu"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Autorización para Transmitir Flashx"
