--- a/script.module.urlresolver/resources/language/Swedish/strings.po
+++ b/script.module.urlresolver/resources/language/Swedish/strings.po
@@ -187,3 +187,7 @@ msgstr "Ingen IP-auktorisering"
 msgctxt "#33043"
 msgid "Vshare.eu Stream Authorization"
 msgstr "Vshare.eu strömauktorisering"
+
+msgctxt "#33044"
+msgid "Flashx Stream Authorization"
+msgstr "Flashx strömauktorisering"
